--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@ html{
 }
 body{
     min-height: 100vh;
-    background:-webkit-linear-gradient(-45deg, #183850 0, #183850 25%, #192C46 50%, #22254C 75%, #22254C 100%);
+    background: -webkit-linear-gradient(-45deg, #009688 0, #4CAF50 25%, #607D8B 50%, #3F51B5 75%, #22254C 100%);
 }
 .form-horizontal{
     background: #fff;
