--- a/css/login.css
+++ b/css/login.css
@@ -23,6 +23,7 @@ body{
 .form-horizontal .heading{
     display: block;
     font-size: 35px;
+    color: #009688;
     font-weight: 700;
     padding: 35px 0;
     border-bottom: 1px solid #f0f0f0;
@@ -121,7 +122,7 @@ body{
     font-size: 14px;
     color: #fff;
     background: #009688;
-    border-radius: 30px;
+    border-radius: 5px;
     padding: 10px 25px;
     border: none;
     text-transform: capitalize;
