--- a/css/showNotices.css
+++ b/css/showNotices.css
@@ -23,7 +23,7 @@
 .notice .title{
 	font-size: 28px;
     font-weight: normal;
-    background: #1565C0;
+    background: #009688;
     color: #ffffff;
     letter-spacing: 3px;
 }
@@ -31,7 +31,7 @@
 .notice .sendInfo{
 	font-size: 16px;
     color: white;
-    background: #23262e;
+    background: #393d49;
     letter-spacing: 2px;
 }
 .notice .sendInfo span{
