--- a/css/index.css
+++ b/css/index.css
@@ -204,3 +204,14 @@ body {
 .icon + .icon {
   padding-left: 10px;
 }
+.layui-layout-admin .layui-footer {
+  position: fixed;
+  left: 200px;
+  right: 0;
+  bottom: 0;
+  color: #d4caca;
+  height: 44px;
+  line-height: 44px;
+  padding: 0 15px;
+  background-color: #2f2d40;
+}
