--- a/css/setting.css
+++ b/css/setting.css
@@ -67,3 +67,14 @@ input{
 .form:hover{
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+.layui-layout-admin .layui-footer {
+    position: fixed;
+    left: 200px;
+    right: 0;
+    bottom: 0;
+    color: #d4caca;
+    height: 44px;
+    line-height: 44px;
+    padding: 0 15px;
+    background-color: #2f2d40;
+}
