--- a/css/showNotices.css
+++ b/css/showNotices.css
@@ -47,3 +47,14 @@
     max-height: 20vh;
     word-break: break-all;
 }
+.layui-layout-admin .layui-footer {
+    position: fixed;
+    left: 200px;
+    right: 0;
+    bottom: 0;
+    color: #d4caca;
+    height: 44px;
+    line-height: 44px;
+    padding: 0 15px;
+    background-color: #2f2d40;
+}
